GenericSetup Product Changelog


  GenericSetup 1.3.2 (unreleased)

    - components: Provide log output when purging utilities or adapters.

    - components: Fixed an undefined variable name in a log message.


  GenericSetup 1.3.1 (2007/08/08)

    - components: correct the object path for the site root to be the
      empty string.

    - components: Made output more diff friendly.

    - utils: Added warnings to old code.
      ImportConfiguratorBase and ExportConfiguratorBase will become deprecated
      as soon as GenericSetup itself no longer uses them. HandlerBase is now
      deprecated.

    - components: Added 'components_xmlconfig.html' form.
      This view allows to inspect and edit component registrations. It is also
      available under the ZMI tab 'manage_components'.


  GenericSetup 1.3 (2007/07/26)

    - components: Removed non-functional support for registering objects in
      nested folders. We only support objects available in the component
      registry's parent now. The component registry needs to be either
      acquisition wrapped or have a __parent__ pointer to get to the parent.


  GenericSetup 1.3-beta (2007/07/12)

    - Guard against situations where encoded text may be compared by the
      differ.
      (http://www.zope.org/Collectors/CMF/471)

    - Extend the ZCatalog import/export mechanism to allow removal of 
      metadata columns in addition to adding them.
      (http://www.zope.org/Collectors/CMF/483)

    - Made sure we register Acquisition free objects as utilities in the
      components handler.

    - Profiles now support version numbers; setup tool tracks profile
      versions during upgrades.

    - Added support for nested 'upgradeStep' directives; expanded upgrade
      step registry into a real registry object and not just a dictionary.

    - Added support for 'metadata.xml' in the profile (read during
      profile registration) to register profile description, version,
      and dependencies.
